--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.3",
+    "@types/axios": "^0.14.0",
+    "@types/faker": "^5.5.9",
     "apexcharts": "^3.30.0",
+    "axios": "^0.24.0",
     "framer-motion": "^5.3.0",
     "next": "12.0.4",
     "react": "17.0.2",
@@ -21,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.20.4",
     "react-icons": "^4.3.1",
+    "react-query": "^3.33.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -28,6 +32,8 @@
     "@types/react": "^17.0.35",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "faker": "^5.5.3",
+    "miragejs": "^0.1.42",
     "typescript": "^4.5.2"
   }
 }
